<resources>
    <string name="app_name">Game of Life</string>
    <string name="title_activity_menu">LifeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="empty_save">{Empty Save}</string>
    <string name="saves_text">Save Slots</string>
    <string name="save_state">Save Game State</string>
    <string name="game_settings">Game Settings</string>
    <string name="start_game">Start Game</string>
    <string name="name_game">Name of the Game</string>
    <string name="select_color">Color Scheme: </string>
    <string name="select_size">Grid Size: </string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="change_scheme">Color Scheme</string>
    <string name="upload">Upload State</string>
    <string name="delay">Delay</string>
    <string name="clone">Clone</string>
    <string name="grid_size">Grid Size:</string>

</resources>
