<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/menu_fragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gol_logo" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/new_game" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saves_text"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_save" />

    <Button
        android:id="@+id/save2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_save" />

    <Button
        android:id="@+id/save3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_save" />

</LinearLayout>